mail/themes/windows/mail/contextMenu.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, you can obtain one at http://mozilla.org/MPL/2.0/. */

@import url("chrome://messenger/skin/shared/contextMenu.css");

menupopup {
  &:not([type="arrow"]) {
    margin-block-start: -1px;
  }

  @media (prefers-contrast) {
    & > :is(menu, menuitem):not([disabled])[_moz-menuactive] {
      color: SelectedItemText;
    }
  }

  & > :is(menu, menuitem) {
    padding-block: var(--menuitem-vertical-padding);
  }

  menulist > & > :is(menu, menuitem) {
    padding-inline-end: 5px;
  }

  menuitem[checked] > .menu-icon {
    display: flex;
  }

  &.webextension-menupopup > menu:not([icon], .menu-iconic),
  &.webextension-menupopup > menuitem:not([checked], [icon], .menuitem-iconic),
  &.gutter-popup:not([needsgutter]) > :is(menu:not(.menu-iconic), menuitem:not(.menuitem-iconic, [type="checkbox"], [type="radio"])),
  menubar > menu &:not([needsgutter]) > :is(menu:not(.menu-iconic), menuitem:not(.menuitem-iconic, [type="checkbox"], [type="radio"])) {
    padding-inline-start: 32px;
  }

  /* Override menu.css rule. */
  &:not([needsgutter], .webextension-menupopup) {
    & > menuitem:is([type="checkbox"], [type="radio"]):not([checked]) > .menu-icon {
      padding-inline-end: 8px;
      display: flex;
    }
  }

  & > :is(menu, menuitem):not([needsgutter]) > menuitem:not([icon], .menuitem-iconic) {
    padding-inline-start: 1em;
  }

  /* Disabled empty item looks too small otherwise, because it has no icon. */
  & menuitem[disabled]:not(.menuitem-iconic) {
    /* This is 16px for an icon + 3px for its margins + 1px for its padding +
     * 2px for its border. */
    min-block-size: 22px;
  }
}

